# Signature-Block-Recovery

./: .gitignore  AGENTS.md  PROJECTMAP.md  README.md  RELEASE.md  SignatureRecoveryGui.spec  config.example.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  template.py
.github/workflows/: benchmarks.yml  ci.yml  docs.yml
completion/: recover-signatures.bash
docs/: README.md  api_reference.md  cli_usage.md  gui_usage.md  installation.md  quickstart.md  troubleshooting.md
signature_recovery/: __init__.py  api.py  exporter.py
signature_recovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
signature_recovery/cli/: main.py
signature_recovery/core/: config.py  deduplicator.py  extractor.py  logging.py  metrics.py  models.py  parser.py  pst_parser.py
signature_recovery/gui/: app.py
signature_recovery/index/: indexer.py  search_index.py
tests/: conftest.py  pypff.py  test_api.py  test_cli.py  test_confidence.py  test_config.py  test_deduplicator.py  test_error_logging.py  test_exporter.py  test_extractor.py  test_gui.py  test_metrics.py  test_parser.py  test_pipeline.py  test_pst_parser.py  test_recover_gui.py  test_recover_signatures.py
tests/benchmarks/: benchmark_index_growth.py  benchmark_large_pst.py  profile_run.py  test_benchmarks.py  test_index_size.py  test_large_pst.py
tests/fixtures/html_bodies/: hr.html  nested.html  sig_div.html  signature_div.html  simple.html
tools/: pyinstaller.sh
